fix for modal z-index position

--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,7 @@ body {
   visibility: hidden;
   transform: scale(1.1);
   transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+  z-index: 9999;
 }
 
 .modal-content {
